Migrate Bmc journel Model

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ db.sqlite3
 /hw3/hw_server/word2vec_bat.csv
 /hw3/hw_server/word2vec_image.csv
 /hw3/hw_server/word2vec_mask.csv
+/hw4/hw_server/colorectal_cancer/
+/hw4/hw_server/Genetic_disease/
